<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:text="@string/welcome_to_spaid"
            android:textSize="25sp"/>

    <EditText
        android:id="@+id/emailSignin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:autofillHints=""
        android:background="@drawable/roundtraingle"
        android:ems="10"
        android:hint="    Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/Textpassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:background="@drawable/roundtraingle"
        android:ems="1"
        android:hint="   Password"
        android:inputType="textPassword"
        android:textColorHint="@color/light_gray" />


    <Button
        android:id="@+id/signupButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/roundtraingle"
        android:backgroundTint="@color/material_dynamic_primary80"
        android:text="@string/signup"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/login"
        android:background="@drawable/roundtraingle"
        android:backgroundTint="@color/material_dynamic_primary80"
        app:cornerRadius="20dp"/>


</LinearLayout>